--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
-        "flatpickr": "^4.6.13"
+        "flatpickr": "^4.6.13",
+        "sweetalert2": "^11.14.5"
     }
 }
